--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "vee-validate": "^2.1.0-beta.6",
     "vue": "^2.5.16",
     "vue-router": "^3.0.1",
+    "vue-the-mask": "^0.11.1",
     "vuetify": "^1.0.19",
     "vuex": "^3.0.1"
   },
