--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "v-money": "^0.8.1",
     "vee-validate": "^2.1.0-beta.6",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
